Update 3.05 Assess and mitigate the vulnerabilities of security architectures, designs and solution elements.md

--- a/DOMAIN3: Security Architecture and Engineering/3.05 Assess and mitigate the vulnerabilities of security architectures, designs and solution elements.md
+++ b/DOMAIN3: Security Architecture and Engineering/3.05 Assess and mitigate the vulnerabilities of security architectures, designs and solution elements.md
@@ -728,16 +728,18 @@ Shared infrastructure risk — vulnerabilities or poor isolation between tenants
 
 ## 3.5.7 Distributed systems ##
 
-A distributed system (aka **Distributed Computing Environment DCE**) consists of multiple independent computers (often referred to as nodes) that communicate over a network to coordinate and perform a task. These systems typically work together to ensure that resources such as computational power, storage, and data are shared and efficiently utilized. The key feature of distributed systems is the decentralization of resources, meaning there is no single point of control or failure.
+A distributed system (aka **Distributed Computing Environment DCE**) consists of multiple independent computers (often referred to as nodes) that communicate over a network to coordinate and perform a task. These systems typically work together to ensure that resources such as computational power, storage, and data are shared and efficiently utilized. 
+
+:brain: The key feature of distributed systems is the decentralization of resources, meaning there is no single point of control or failure.
 
 Characteristics of Distributed Systems are:
-- Multiple Autonomous Components: Each node in a distributed system operates independently, yet cooperatively, with other nodes.
-- Scalability: Distributed systems are often designed to scale horizontally, allowing new nodes to be added as the system grows to handle increasing workloads.
-- Fault Tolerance: Distributed systems are designed to maintain functionality even if one or more nodes fail. This is often achieved through redundancy and replication mechanisms.
-- Concurrency: Distributed systems allow multiple processes to execute concurrently, providing efficient utilization of resources.
-- Communication Over Networks: Nodes communicate with each other over networks using various protocols, such as TCP/IP, HTTP, or custom communication protocols.
+- **Multiple Autonomous Components:** Each node in a distributed system operates independently, yet cooperatively, with other nodes.
+- **Scalability:** Distributed systems are often designed to scale horizontally, allowing new nodes to be added as the system grows to handle increasing workloads.
+- **Fault Tolerance:** Distributed systems are designed to maintain functionality even if one or more nodes fail. This is often achieved through redundancy and replication mechanisms.
+- **Concurrency:** Distributed systems allow multiple processes to execute concurrently, providing efficient utilization of resources.
+- **Communication Over Networks:** Nodes communicate with each other over networks using various protocols, such as TCP/IP, HTTP, or custom communication protocols.
 
-Distributed systems consist of several components, each of which plays a crucial role in maintaining the system’s efficiency, security, and reliability.
+Distributed systems consist of several **components**, each of which plays a crucial role in maintaining the system’s efficiency, security, and reliability.
 
 1 **Nodes (Computing Devices)** can be any computing device, such as a server, desktop, or mobile device. Each node performs computations and stores data, but no node has complete control over the entire system. Nodes communicate with each other over a network to coordinate and complete tasks.
 
@@ -1073,7 +1075,7 @@ Vulnerabilities of Containerization are:
 
 7. Inadequate Resource Allocation. Containers that consume too many resources can lead to system performance degradation or denial-of-service (DoS) attacks. Properly configuring resource limits for each container ensures that no single container can exhaust host resources and disrupt the entire system.
 
-:necktie: containers should be configured with the principle of least privilege, and resources should be allocated carefully to prevent system overload.
+:necktie: Containers should be configured with the principle of least privilege, and resources should be allocated carefully to prevent system overload.
 
 ### Open Questions ###
 
@@ -1148,7 +1150,8 @@ To minimize this risk, organizations should assign functions only the minimum pe
 | **NIST**             | FaaS Serverless Control Framework (CSA)                      | Serverless security mapped to NIST SP 800-53 r5 controls        | [cloudsecurityalliance.org](https://cloudsecurityalliance.org/artifacts/faas-serverless-control-framework-set-based-on-nist-800-53-r5-controls)                 |
 | **NIST**             | SP 800-204 – Security Strategies for Microservices           | Microservices security (applicable to serverless)               | [nist.gov](https://www.nist.gov/news-events/news/2019/08/security-strategies-microservices-based-application-systems-nist-publishes)                            |
 | **NIST**             | SP 800-204C – DevSecOps Primitives for Cloud-Native Apps     | Secure development & deployment for serverless pipelines        | [nvlpubs.nist.gov](https://nvlpubs.nist.gov/nistpubs/SpecialPublications/NIST.SP.800-204C.pdf)                                                                  |
-                                                                                                             |
+
+                                                                                                      |
 ### Open Questions ###
 
 1. Why does the stateless and ephemeral nature of serverless functions complicate both state management and security monitoring?
