Update 3.05 Assess and mitigate the vulnerabilities of security architectures, designs and solution elements.md

--- a/DOMAIN3: Security Architecture and Engineering/3.05 Assess and mitigate the vulnerabilities of security architectures, designs and solution elements.md
+++ b/DOMAIN3: Security Architecture and Engineering/3.05 Assess and mitigate the vulnerabilities of security architectures, designs and solution elements.md
@@ -1149,9 +1149,9 @@ To minimize this risk, organizations should assign functions only the minimum pe
 | -------------------- | ------------------------------------------------------------ | --------------------------------------------------------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------- |
 | **NIST**             | FaaS Serverless Control Framework (CSA)                      | Serverless security mapped to NIST SP 800-53 r5 controls        | [cloudsecurityalliance.org](https://cloudsecurityalliance.org/artifacts/faas-serverless-control-framework-set-based-on-nist-800-53-r5-controls)                 |
 | **NIST**             | SP 800-204 – Security Strategies for Microservices           | Microservices security (applicable to serverless)               | [nist.gov](https://www.nist.gov/news-events/news/2019/08/security-strategies-microservices-based-application-systems-nist-publishes)                            |
-| **NIST**             | SP 800-204C – DevSecOps Primitives for Cloud-Native Apps     | Secure development & deployment for serverless pipelines        | [nvlpubs.nist.gov](https://nvlpubs.nist.gov/nistpubs/SpecialPublications/NIST.SP.800-204C.pdf)                                                                  |
+| **NIST**             | SP 800-204C – DevSecOps Primitives for Cloud-Native Apps     | Secure development & deployment for serverless pipelines        | [nvlpubs.nist.gov](https://nvlpubs.nist.gov/nistpubs/SpecialPublications/NIST.SP.800-204C.pdf)
 
-                                                                                                      |
+
 ### Open Questions ###
 
 1. Why does the stateless and ephemeral nature of serverless functions complicate both state management and security monitoring?
