Update 3.05 Assess and mitigate the vulnerabilities of security architectures, designs and solution elements.md

--- a/DOMAIN3: Security Architecture and Engineering/3.05 Assess and mitigate the vulnerabilities of security architectures, designs and solution elements.md
+++ b/DOMAIN3: Security Architecture and Engineering/3.05 Assess and mitigate the vulnerabilities of security architectures, designs and solution elements.md
@@ -1118,7 +1118,10 @@ In a serverless environment, functions or small units of code are triggered by e
 Serverless computing offers significant advantages in terms of reduced operational overhead, scalability, and cost optimization. However, it also introduces new security concerns that need to be addressed. 
 
 The most defining characteristic of serverless computing is that it **abstracts away the server infrastructure**. With serverless computing, developers no longer need to worry about provisioning, scaling, or managing servers. This is handled automatically by the cloud provider. The "serverless" model actually involves servers, but the responsibility for managing them lies with the cloud provider.
-Serverless computing operates on a pay-as-you-go model, where users are charged only for the execution time of their functions, based on the number of invocations and the resources consumed during execution. This can result in cost savings, as users only pay for the compute power they actually use, rather than maintaining idle servers.
+
+:bulb: Serverless computing operates on a pay-as-you-go model, where users are charged only for the execution time of their functions, based on the number of invocations and the resources consumed during execution. This can result in cost savings, as users only pay for the compute power they actually use, rather than maintaining idle servers.
+
+
 The scalability of serverless platforms is automatic. As demand for the application increases, the cloud provider dynamically allocates resources to handle the load, scaling up or down as needed. This makes serverless ideal for applications with unpredictable or fluctuating traffic.
 Serverless functions are typically short-lived and stateless. Each invocation is independent, meaning that the function does not retain any data or context between executions. This stateless nature can simplify application design, but it also presents challenges in terms of state management and data persistence.
 Another benefit of serverless computing is rapid deployment. Developers can quickly deploy small units of code and focus on specific business logic, which accelerates development cycles and allows for faster updates to applications.
