Update 3.05 Assess and mitigate the vulnerabilities of security architectures, designs and solution elements.md

--- a/DOMAIN3: Security Architecture and Engineering/3.05 Assess and mitigate the vulnerabilities of security architectures, designs and solution elements.md
+++ b/DOMAIN3: Security Architecture and Engineering/3.05 Assess and mitigate the vulnerabilities of security architectures, designs and solution elements.md
@@ -1330,7 +1330,9 @@ HPC systems consist of many interconnected resources running interdependent task
 
 ## 3.5.14 Edge Computing Systems ##
 
-Edge computing is a **decentralized computing model that brings computation and data storage closer to the data source, or "edge," of a network**, rather than relying solely on a central data center or cloud-based infrastructure. This paradigm is designed to reduce latency, optimize bandwidth, and improve the performance of applications that require real-time processing. Edge computing is particularly useful in IoT environments, autonomous vehicles, industrial automation, and smart cities, where low-latency data processing is crucial for decision-making.
+Edge computing is a **decentralized computing model that brings computation and data storage closer to the data source, or "edge," of a network**, rather than relying solely on a central data center or cloud-based infrastructure. This paradigm is designed to reduce latency, optimize bandwidth, and improve the performance of applications that require real-time processing. 
+
+:bulb: Edge computing is particularly useful in IoT environments, autonomous vehicles, industrial automation, and smart cities, where low-latency data processing is crucial for decision-making.
 
 Edge computing systems are designed to bring computation closer to the data source, which is typically a device or sensor that generates large volumes of data. The primary advantage of edge computing is that it reduces the amount of data that needs to be transmitted to centralized data centers or cloud platforms, thus lowering bandwidth costs and improving overall system responsiveness.
 
@@ -1428,11 +1430,11 @@ graph TD
 
 The most common types of virtualization include server virtualization, storage virtualization, and network virtualization:
 
-1. Server Virtualization: This is the most common form of virtualization, where a hypervisor (also called a Virtual Machine Monitor or VMM) sits between the physical hardware and the virtual machines, managing their execution. The hypervisor allocates resources (such as CPU, memory, and storage) to VMs and ensures they run independently of each other.
+1. **Server Virtualization:** This is the most common form of virtualization, where a hypervisor (also called a Virtual Machine Monitor or VMM) sits between the physical hardware and the virtual machines, managing their execution. The hypervisor allocates resources (such as CPU, memory, and storage) to VMs and ensures they run independently of each other.
 
-2. Storage Virtualization: Involves combining multiple storage devices into a single virtual pool that can be managed more easily. This improves storage utilization, scalability, and disaster recovery capabilities.
+2. **Storage Virtualization:** Involves combining multiple storage devices into a single virtual pool that can be managed more easily. This improves storage utilization, scalability, and disaster recovery capabilities.
 
-3. Network Virtualization: Allows the creation of virtual networks that operate independently of physical networks. This can improve network resource management, flexibility, and efficiency.
+3. **Network Virtualization:** Allows the creation of virtual networks that operate independently of physical networks. This can improve network resource management, flexibility, and efficiency.
 
 One of the primary benefits of virtualization is its ability to create isolated environments for different workloads. Virtual machines, for instance, run in separate virtualized containers, which means that if one VM crashes or is compromised, the other VMs can continue running unaffected. This isolation enhances both security and fault tolerance.
 Virtualization also improves scalability and flexibility. With a hypervisor in place, new VMs can be rapidly deployed on existing hardware, enabling organizations to quickly adapt to changing workloads. This agility is particularly important in cloud computing, where virtualized systems provide the foundation for Infrastructure as a Service (IaaS) offerings.
@@ -1462,27 +1464,27 @@ graph TD
 
 While virtualization provides many benefits, it also introduces unique security vulnerabilities. These vulnerabilities are related to the shared nature of virtualized resources, the complexity of managing virtualized environments, and the additional layers of software involved in virtualization.
 
-1. Hypervisor Vulnerabilities. The hypervisor, or virtual machine monitor (VMM), is the critical component that manages the virtualized environment. It controls the allocation of resources and ensures that VMs are isolated from one another. However, if the hypervisor itself is compromised, it can affect all the virtual machines running on it. A vulnerability in the hypervisor may allow an attacker to escape from a VM and gain control over other VMs or even the underlying host system.
+1. **Hypervisor Vulnerabilities.** The hypervisor, or virtual machine monitor (VMM), is the critical component that manages the virtualized environment. It controls the allocation of resources and ensures that VMs are isolated from one another. However, if the hypervisor itself is compromised, it can affect all the virtual machines running on it. A vulnerability in the hypervisor may allow an attacker to escape from a VM and gain control over other VMs or even the underlying host system.
 To protect against hypervisor vulnerabilities, regular updates and patches must be applied. Additionally, organizations should use strong access controls to limit who can interact with the hypervisor and ensure that only trusted administrators have access to critical virtualization management interfaces.
 
-2. VM Escape Attacks. VM escape refers to a situation where an attacker within one virtual machine exploits a vulnerability to break out of the VM and gain access to the underlying host or other VMs running on the same host. This is a serious risk, as it allows attackers to bypass the isolation provided by virtualization.
+2. **VM Escape Attacks.** VM escape refers to a situation where an attacker within one virtual machine exploits a vulnerability to break out of the VM and gain access to the underlying host or other VMs running on the same host. This is a serious risk, as it allows attackers to bypass the isolation provided by virtualization.
 To mitigate the risk of VM escape, administrators should implement strict access controls and segmentation between VMs. Additionally, using security tools designed to detect VM escape attempts and isolating sensitive workloads in separate virtualized environments can help reduce the impact of such attacks.
 
-3. Shared Resources and Resource Contention. In virtualized environments, multiple VMs share the same physical resources, such as CPU, memory, storage, and network bandwidth. While this improves resource utilization, it also creates the possibility of resource contention. If one VM consumes an excessive amount of resources, it may impact the performance of other VMs running on the same host.
+3. **Shared Resources and Resource Contention.** In virtualized environments, multiple VMs share the same physical resources, such as CPU, memory, storage, and network bandwidth. While this improves resource utilization, it also creates the possibility of resource contention. If one VM consumes an excessive amount of resources, it may impact the performance of other VMs running on the same host.
 Resource contention can also be used as a vector for denial-of-service (DoS) attacks. An attacker could create a resource-intensive workload within a VM, intentionally depleting the resources of the host and causing performance degradation or outages for other VMs.
 To address resource contention, administrators should implement resource allocation policies, such as limiting CPU and memory usage per VM, and use tools that provide monitoring and alerts for performance degradation. Resource isolation features, such as CPU pinning and memory hot-add, can help ensure that critical VMs have enough resources to function properly.
 
-4. Snapshot and Image Management Risks. Virtual machines can be easily copied, cloned, and snapshotted, which is useful for backup and disaster recovery. However, if these snapshots are not properly managed, they can pose a security risk. Snapshots often contain sensitive data or configurations, and if they are not securely stored, they may be accessed by unauthorized users.
+4. **Snapshot and Image Management Risks.** Virtual machines can be easily copied, cloned, and snapshotted, which is useful for backup and disaster recovery. However, if these snapshots are not properly managed, they can pose a security risk. Snapshots often contain sensitive data or configurations, and if they are not securely stored, they may be accessed by unauthorized users.
 Additionally, malicious actors could potentially exploit vulnerabilities in the snapshot process to gain access to sensitive information or manipulate system configurations.
 To mitigate these risks, organizations should implement policies for securely managing snapshots, including encrypting snapshot files and ensuring that snapshots are stored in secure, access-controlled locations. It is also essential to maintain proper access logs to monitor who is creating and accessing snapshots.
 
-5. Increased Attack Surface. Virtualized systems introduce additional layers of software that can be targeted by attackers. These layers include the hypervisor, virtual machine management tools, and virtual network switches. Each of these components can introduce new attack vectors that must be secured and monitored.
+5. **Increased Attack Surface.** Virtualized systems introduce additional layers of software that can be targeted by attackers. These layers include the hypervisor, virtual machine management tools, and virtual network switches. Each of these components can introduce new attack vectors that must be secured and monitored.
 To minimize the attack surface, it is essential to implement strong security measures at each layer of the virtualization stack. This includes applying patches and updates to the hypervisor and management software, using firewalls and intrusion detection systems (IDS) for virtual networks, and implementing network segmentation to isolate different virtualized environments.
 
-6. Multi-Tenancy and Tenant Isolation Risks. In cloud environments that rely on virtualization, multiple customers or tenants share the same physical hardware. This multi-tenancy model provides significant cost savings but also introduces the risk that one tenant’s actions could affect others. For example, vulnerabilities in the virtual network layer or misconfigurations in the hypervisor could allow attackers to access the data or resources of other tenants.
+6. **Multi-Tenancy and Tenant Isolation Risks.** In cloud environments that rely on virtualization, multiple customers or tenants share the same physical hardware. This multi-tenancy model provides significant cost savings but also introduces the risk that one tenant’s actions could affect others. For example, vulnerabilities in the virtual network layer or misconfigurations in the hypervisor could allow attackers to access the data or resources of other tenants.
 To mitigate these risks, cloud providers should implement strong tenant isolation techniques, such as virtual private networks (VPNs), encryption, and dedicated physical hardware for sensitive workloads. Additionally, access controls should be enforced at the virtual machine and network level to ensure that each tenant’s resources remain isolated.
 
-7. Complexity of Managing Virtualized Environments. As virtualization adds layers of abstraction, the complexity of managing virtualized environments increases. Administrators need to be well-versed in managing virtual machines, networking, and storage resources. Misconfigurations or oversights in this complex environment can create security gaps, allowing attackers to exploit vulnerabilities. To reduce the complexity of managing virtualized environments, organizations should invest in automation and orchestration tools that streamline the deployment, configuration, and management of virtual machines. Regular security audits and vulnerability assessments should also be conducted to identify and address potential issues before they can be exploited.
+7. **Complexity of Managing Virtualized Environments.** As virtualization adds layers of abstraction, the complexity of managing virtualized environments increases. Administrators need to be well-versed in managing virtual machines, networking, and storage resources. Misconfigurations or oversights in this complex environment can create security gaps, allowing attackers to exploit vulnerabilities. To reduce the complexity of managing virtualized environments, organizations should invest in automation and orchestration tools that streamline the deployment, configuration, and management of virtual machines. Regular security audits and vulnerability assessments should also be conducted to identify and address potential issues before they can be exploited.
 
 ### Open Questions ###
 
