Update 6.D.2 The Hidden Diary of Hackers: Understanding CVEs.md

--- a/DOMAIN6: Security Assessment and Testing/6.D.2 The Hidden Diary of Hackers: Understanding CVEs.md
+++ b/DOMAIN6: Security Assessment and Testing/6.D.2 The Hidden Diary of Hackers: Understanding CVEs.md
@@ -1,4 +1,4 @@
-## The Hidden Diary of Hackers: Understanding CVEs ##
+## 6.D.2 The Hidden Diary of Hackers: Understanding CVEs ##
 
 A few years ago, a small team in a financial company noticed something odd. Their web application was running slowly, and every now and then, strange connections appeared in the logs. They checked firewalls, servers, and code — nothing seemed wrong.
 
