--- a/DOMAIN3 - Security Architecture and Engineering/3.5 Assess and mitigate the vulnerabilities of security architectures, designs and solution elements.md
+++ b/DOMAIN3 - Security Architecture and Engineering/3.5 Assess and mitigate the vulnerabilities of security architectures, designs and solution elements.md
@@ -178,7 +178,7 @@ Servers are not only vulnerable to cyber threats but also to physical risks, suc
 - Use backup power solutions (like UPS systems).
 - Follow best practices for server hardening, which means configuring the system securely to reduce attack surfaces.
 
-🔗 [CIS Benchmarks](https://www.cisecurity.org/cis-benchmarks) contain recommended security settings for different operating systems and software.
+> 🔗 [CIS Benchmarks](https://www.cisecurity.org/cis-benchmarks) contain recommended security settings for different operating systems and software.
 
 ### Open Questions ###
 
@@ -239,7 +239,7 @@ Databases store valuable information, so keeping them secure is critical. Many s
 11. **Enforce Separation of Duties:** avoid giving one person too much power over the database. For critical operations, require at least two administrators to approve or execute actions.
 12. **Follow Vendor-Specific Best Practices**: Different databases (e.g., Oracle, SQL Server, MySQL, PostgreSQL) have unique security settings. Always check the vendor’s documentation and enable security features like Oracle's Data Dictionary Protection, which limits what even admins can do.
 
-🔗 Refer also to [8.D.1 Databases Basics](../DOMAIN8%20-%20Software%20Development%20Security/8.D.1%20Databases%20Basics.md)
+> 🔗 Refer also to [8.D.1 Databases Basics](../DOMAIN8%20-%20Software%20Development%20Security/8.D.1%20Databases%20Basics.md)
 
 **Data at rest** refers to information stored in a database, whether in tables, files, or backups. Protecting this data is essential and can be done with the following key Methods:
 - **Transparent Data Encryption (TDE):** Encrypts database files at the storage level. Many databases, like SQL Server and Oracle, support this feature.
@@ -250,7 +250,7 @@ Databases store valuable information, so keeping them secure is critical. Many s
 - **Transport Layer Security (TLS):** Encrypts data traveling over the network, preventing eavesdropping. Always enable TLS for database connections.
 - **VPNs and Secure Tunnels:** If your database traffic moves across external networks, a VPN adds another layer of encryption.
 
-🔗 For more info about Data States look here: [2.4 Manage Data Lifecycle](../DOMAIN2%20-%20Asset%20Security/2.4%20Manage%20Data%20Lifecycle.md)
+> 🔗 For more info about Data States look here: [2.4 Manage Data Lifecycle](../DOMAIN2%20-%20Asset%20Security/2.4%20Manage%20Data%20Lifecycle.md)
 
  There are some other threats that come from how databases work under the hood:
  | **Attack Type**         | **Description**                                                                                  | **How to Defend**                                                                                 |
